- Migrated `Scrollable`, `Spacer` - Fixed `<Grid spacing>` not working

--- a/src/framework/mixins/_spacings.scss
+++ b/src/framework/mixins/_spacings.scss
@@ -5,7 +5,7 @@
         --spacing-x: #{variables.format-var("#{$namespace}.spacing.x")};
         --spacing-y: #{variables.format-var("#{$namespace}.spacing.y")};
     } @else {
-        --spacing-x: 0px;
-        --spacing-y: 0px;
+        --spacing-x: 0;
+        --spacing-y: 0;
     }
 }
